# pwill_synthetic_data_generator

./: .env.template  .gitignore  README.md  check_openrouter.py  main.py  pyproject.toml  verify_providers.py
app/: main.py  state.py  ui.py
config/: settings.py
core/: generator.py  judge.py  refiner.py  schemas.py
evaluation/: metrics.py
exports/: exporter.py
llms/: llm_client.py  model_registry.py  openrouter_client.py
memory/: database.py  repository.py
