[project]
name = "pwill-synthetic-data-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.1.0",
    "jsonschema>=4.25.1",
    "openai>=2.12.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "tenacity>=9.1.2",
]
